# bigquery-demo-putting-parquet-to

./: .gitignore  gendata.py  main.py  pyproject.toml
