[tool.poetry]
name = "make-parquet"
version = "0.1.0"
description = ""
authors = ["shin5ok <shin5ok@55mp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^11.0.0"
numpy = "^1.24.2"
pandas = "^2.0.0"
parquet-cli = "^1.3"
#fake = "^0.8"
Faker = "^18.3.4"
click = "^8.1.3"
google-cloud-bigquery = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
