[tool.poetry]
name = "bigquery-demo-putting-parquet-to"
version = "0.1.0"
description = ""
authors = ["shin5ok <shin5ok@55mp.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^11.0.0"
numpy = "^1.24.2"
pandas = "^2.0.0"
click = "^8.1.3"
google-cloud-bigquery = "^3.9.0"
Faker = "^18.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
